# asr_next_best_view

./: .CMakeLists.txt.swp  .directory  .gitignore  CMakeLists.txt  Doxyfile  License.txt  README.md  mainpage.dox  package.xml
docs/html/: CameraModelFilter_8hpp.html  CameraModelFilter_8hpp_source.html  DefaultRatingModule_8hpp.html  DefaultRatingModule_8hpp_source.html  DefaultRating_8hpp.html  DefaultRating_8hpp_source.html  DefaultViewportPoint_8hpp.html  DefaultViewportPoint_8hpp_source.html  KdTree_8hpp.html  KdTree_8hpp_source.html  MarkerHelper_8hpp.html  MarkerHelper_8hpp_source.html  MathHelper_8hpp.html  MathHelper_8hpp_source.html  NextBestViewCalculator_8hpp.html  NextBestViewCalculator_8hpp_source.html  NextBestView_8hpp.html  NextBestView_8hpp_source.html  PTURobotModel_8hpp.html  PTURobotModel_8hpp_source.html  PlaneSubSpaceSampler_8hpp.html  PlaneSubSpaceSampler_8hpp_source.html  RatingModule_8hpp.html  RatingModule_8hpp_source.html  Rating_8hpp.html  Rating_8hpp_source.html  RealObjectPoint_8hpp.html  RealObjectPoint_8hpp_source.html  RobotModel_8hpp.html  RobotModel_8hpp_source.html  SingleCameraModelFilter_8hpp.html  SingleCameraModelFilter_8hpp_source.html  SpaceSamplePoint_8hpp.html  SpaceSamplePoint_8hpp_source.html  SpaceSampler_8hpp.html  SpaceSampler_8hpp_source.html  SpiralApproxUnitSphereSampler_8hpp.html  SpiralApproxUnitSphereSampler_8hpp_source.html  StereoCameraModelFilter_8hpp.html  StereoCameraModelFilter_8hpp_source.html  (+64 more)
docs/latex/: CameraModelFilter_8hpp.tex  DefaultRatingModule_8hpp.tex  DefaultRating_8hpp.tex  DefaultViewportPoint_8hpp.tex  KdTree_8hpp.tex  MarkerHelper_8hpp.tex  MathHelper_8hpp.tex  NextBestViewCalculator_8hpp.tex  NextBestView_8hpp.tex  PTURobotModel_8hpp.tex  PlaneSubSpaceSampler_8hpp.tex  RatingModule_8hpp.tex  Rating_8hpp.tex  RealObjectPoint_8hpp.tex  RobotModel_8hpp.tex  SingleCameraModelFilter_8hpp.tex  SpaceSamplePoint_8hpp.tex  SpaceSampler_8hpp.tex  SpiralApproxUnitSphereSampler_8hpp.tex  StereoCameraModelFilter_8hpp.tex  UnitSphereSampler_8hpp.tex  annotated.tex  classnext__best__view_1_1CameraModelFilter.eps  classnext__best__view_1_1CameraModelFilter.tex  classnext__best__view_1_1DefaultRatingModule.eps  classnext__best__view_1_1DefaultRatingModule.tex  classnext__best__view_1_1KdTree.tex  classnext__best__view_1_1MarkerHelper.tex  classnext__best__view_1_1MathHelper.tex  classnext__best__view_1_1NextBestView.tex  classnext__best__view_1_1NextBestViewCalculator.tex  classnext__best__view_1_1PTURobotModel.eps  classnext__best__view_1_1PTURobotModel.tex  classnext__best__view_1_1PlaneSubSpaceSampler.eps  classnext__best__view_1_1PlaneSubSpaceSampler.tex  classnext__best__view_1_1RatingModule.eps  classnext__best__view_1_1RatingModule.tex  classnext__best__view_1_1RobotModel.eps  classnext__best__view_1_1RobotModel.tex  classnext__best__view_1_1SingleCameraModelFilter.eps  (+25 more)
include/: typedef.hpp
include/next_best_view/: EvolutionaryAlgorithm.hpp  GeneticAlgorithm.hpp  NextBestView.hpp  NextBestViewCache.hpp  NextBestViewCalculator.hpp  NextBestViewCalculator.hpp.orig  NextBestViewPrediction.hpp  ViewMutation.hpp
include/rapid_xml/: rapidxml_print.hpp
launch/: RobotModelService.launch  RobotModelServiceReal.launch  RobotModelServiceSim.launch  VisualizationConfig.yaml  all_components_next_best_view.launch  nbv_nav.rviz  next_best_view.launch  next_best_view.launch~  next_best_view_core.launch  next_best_view_core_real.launch  next_best_view_core_sim.launch  next_best_view_settings.yaml  next_best_view_settings_real.yaml  next_best_view_settings_sim.yaml  set_focus_point.launch  test.launch  test_IK.launch  test_math.launch  test_multi_id_scene.launch  test_multi_scene.launch  test_parameters.launch  test_parameters_area.launch  test_parameters_orientation.launch  test_parameters_positions.launch  test_parameters_side_object.launch  test_parameters_size.launch  test_parameters_types+size.launch  test_parameters_types.launch  test_performance.launch  test_ralf.launch  test_rate_viewports.launch  test_raytracing.launch  test_single_scene.launch  test_stream.launch  test_update_pointcloud.launch
log/: rosconsole.config
msg/: AttributedPoint.msg  AttributedPointCloud.msg  NormalsInfo.msg  RatedViewport.msg  RobotStateMessage.msg
param/: VisualizationConfig.yaml
rsc/: CropBoxList.xml  CropBoxListHighResolution.xml  CropBoxListHighResolutionRearranged.xml  CropBoxListHighResolutionRearrangedTableFit.xml  CropBoxListHighResolutionRearrangedTableFitWithNormals.xml  CropBoxListManual.xml  CropBoxListTableFit.xml  CropBoxListTableFitWithNormals.xml  CropBoxListWholeRoom.xml  CropBoxListWholeRoomWithNormals.xml  DynamicParameters.cfg  RegionToCropBox.py  RegionToCropBoxAndNormals.py  SetFocusPoint.py  TopicsConfig.yaml  VisualizationConfig.yaml  costmap.pgm  costmap_common_params.yaml  costmap_common_params_sim.yaml  costmap_params.yaml  next_best_view_settings_real.yaml  next_best_view_settings_sim.yaml  regions.csv  regions_high_resolution.csv  regions_high_resolution_rearranged.csv  regions_high_resolution_rearranged_table_fit.csv  regions_high_resolution_rearranged_table_fit_with_normals.csv  regions_table_fit.csv  regions_table_fit_with_normals.csv  regions_whole_room_with_normals.csv  robot_model_frames.yaml  sphere.dae
rsc/world/: world.xml
src/: EvolutionaryAlgorithm.cpp  GeneticAlgorithm.cpp  NextBestViewCache.cpp  NextBestViewCalculator.cpp  NextBestViewPrediction.cpp  ViewMutation.cpp  next_best_view.cpp
srv/: CalculateCameraPose.srv  CalculateCameraPoseCorrection.srv  CalculateRobotState.srv  GetActiveNormals.srv  GetAttributedPointCloud.srv  GetDistance.srv  GetMovementCosts.srv  GetNextBestView.srv  GetPointCloud2.srv  GetRobotPose.srv  GetSpaceSampling.srv  IsPoseReachable.srv  IsPositionAllowed.srv  IsPositionReachable.srv  RateViewports.srv  RemoveObjects.srv  ResetCalculator.srv  SetAttributedPointCloud.srv  SetInitRobotState.srv  SetVisualization.srv  SetupVisualization.srv  TriggerFrustumVisualization.srv  TriggerFrustumsAndPointCloudVisualization.srv  UpdatePointCloud.srv
(+266 files in other folders)
